--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ services:
   backend:
     build: ./backend
     ports:
-      - "5000:5000"
+      - "5000:5000"   # API
+      - "9229:9229"   # Debugger
     environment:
       - DB_HOST=db
       - DB_USER=postgres
@@ -14,7 +15,7 @@ services:
       - /app/node_modules
     depends_on:
       - db
-    command: npm run dev
+    command: node --inspect=0.0.0.0:9229 server.js
 
   frontend:
     build: ./frontend
